<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signUp"
    android:gravity="center"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:paddingBottom="20dp"
        android:text="@string/sinup"
        android:textSize="32sp"
        android:textStyle="bold"
        style="@style/customstyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/user"
            style="@style/customstyle" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_margin="8dp"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/password"
            android:textSize="26sp"
            android:textStyle="bold" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:hint="**************"
            style="@style/customstyle"
            />
    </LinearLayout>   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/conpassword"
       style="@style/customstyle" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:hint="**************"
            style="@style/customstyle"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/btnsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sinup"
        android:textSize="26sp"
        android:layout_marginTop="40dp"
        />

</LinearLayout>


</LinearLayout>